--- a/igraph_cliques.ipynb
+++ b/igraph_cliques.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Community Detection Lab (week 1)\n",
+    "# Community Detection Lab (week 1: cliques)\n",
     "Tasks: https://goo.gl/40VHTW  \n",
     "Slides for the week 1: https://goo.gl/iFBYmV"
    ]
