--- a/igraph_cliques.ipynb
+++ b/igraph_cliques.ipynb
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2.3.1 Evalaute the number of vertices in 4-clique chains"
+    "### Task 2.3.1 Evaluate the number of vertices in 4-clique chains"
    ]
   },
   {
