--- a/igraph_cliques.ipynb
+++ b/igraph_cliques.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "# Impor python-igraph library\n",
+    "# Import python-igraph library\n",
     "import igraph\n",
     "print(igraph.__version__)"
    ]
