Solutions for the week 2 added

--- a/igraph_cliques.ipynb
+++ b/igraph_cliques.ipynb
@@ -192,7 +192,9 @@
     "subg.vs[\"label\"] = subg.vs[\"name\"]\n",
     "subg.vs['color'] = 'green'\n",
     "# Save visualization to the specified file\n",
-    "subgimg = 'email_largest_clq.png'"
+    "subgimg = 'email_largest_clq.png'\n",
+    "# Visualize the subgraph\n",
+    "igraph.plot(g, target=gimg)"
    ]
   },
   {
