Visualization parameter fixed

--- a/igraph_cliques.ipynb
+++ b/igraph_cliques.ipynb
@@ -194,7 +194,7 @@
     "# Save visualization to the specified file\n",
     "subgimg = 'email_largest_clq.png'\n",
     "# Visualize the subgraph\n",
-    "igraph.plot(g, target=gimg)"
+    "igraph.plot(g, target=subgimg)"
    ]
   },
   {
